update pkgdown for 0.0.8; flesh out some vignettes

--- a/README.Rmd
+++ b/README.Rmd
@@ -9,17 +9,45 @@ output:
 
 [![Build Status](https://travis-ci.org/fabian-s/tidyfun.svg?branch=master)](https://travis-ci.org/fabian-s/tidyfun)
 
-The goal of **`tidyfun`** is to provide accessible and well-documented software 
-that **makes functional data analysis in `R` easy**, specifically:  
-data wrangling and exploratory analysis.
+```{r setup, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "##",
+  fig.width = 8, 
+  fig.height = 5.5,
+  out.width = "90%"
+)
 
-**`tidyfun`** provides:  
+library(tidyverse)
+library(viridisLite)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+
+library("tidyfun")
+#try(devtools::load_all("~/fda/tidyfun"))
+#try(devtools::load_all("~/Work/fda/tidyfun"))
+
+pal_5 = viridis(7)[-(1:2)]
+set.seed(1221)
+```
+
+The goal of **`tidyfun`** is to provide accessible and well-documented software that **makes functional data analysis in `R` easy** -- specifically data wrangling and exploratory analysis. This is achieved by introducing a new data type (`tf`). Vectors of class `tf` can be operated on using many standard functions (`+`, `mean`, etc.) as well as several new functions in `tidyfun` (`tf_smooth`, `tf_where`). 
+
+**Crucially**, vectors of class `tf` can be included in data frames containing other variables, enabling data manipulation using `tidyverse` tools. This approach is connected to the conceptual framework in functional data analysis, which assumes that _complete functions_ are the unit of observation; with `tidyfun`, full curves sit alongside numeric, factor, and other observations on the same subject. 
+
+**`tidyfun`** provides:
 
 - new **data types** for representing functional data: **`tfd`** & **`tfb`**
 - arithmetic **operators** and descriptive **statistics** for such data
 - `tidyverse`-verbs for handling functional data -- especially **inside** data frames
 - new **graphics** functions for `tf` vectors and tidy functional data frames
-
 
 For detailed information on the features of `tidyfun`, check out articles on the following topics:
 
@@ -27,6 +55,20 @@ For detailed information on the features of `tidyfun`, check out articles on the
 - [Converting](https://fabian-s.github.io/tidyfun/articles/02_Conversion.html) non-tidy functional data (matrices, "long" and "wide" data frames) to tidy functional data
 - [Wrangling](https://fabian-s.github.io/tidyfun/articles/03_Data_Wrangling.html) data frames that include functional data using `tidyverse` and `tidyfun` tools
 - [Visualizing](https://fabian-s.github.io/tidyfun/articles/04_Visualization.html) tidy functional data
+
+The result is a package that enables exploratory data analysis like the following, which computes and then smooths group-specific mean curves in the `dti_df` dataset, and plots the result:
+
+```{r}
+dti_df
+
+dti_df %>% 
+  group_by(case, sex) %>% 
+  summarize(mean_cca = mean(cca, na.rm = TRUE)) %>% 
+  ggplot(aes(y = mean_cca, color = case)) + 
+    geom_spaghetti(size = 2) + 
+    facet_grid(~sex)
+```
+
 
 ## Installation
 
@@ -50,17 +92,21 @@ Almost all
 
 are defined for **`tidyfun`**'s data structures ([more](https://fabian-s.github.io/tidyfun/reference/index.html#section-arithmetic-logical-and-summary-functions)).
 
-The `tf` objects are basically glorified lists, so they work well as columns in data frames. That makes it a lot easier to keep your other data and functional measurements together in one object for preprocessing, exploratory analysis and description.
+The `tf` objects are basically glorified lists, so they work well as columns in data frames. That makes it a lot easier to keep your other data and functional measurements together in one object for preprocessing, exploratory analysis and description. At the same time, these objects actually behave like vectors of *functions* to some extent, i.e., they can be evaluated on any point in their domain, they can be integrated or differentiated, etc.
 
-At the same time, these objects actually behave like vectors of *functions* to some extent, i.e., they can be evaluated on any point in their domain, they can be integrated or differentiated, etc.
+[See here](https://fabian-s.github.io/tidyfun/articles/x01_tf_Vectors.html)) for more information on the operations defined for `tf` vectors. 
+
+#### Methods for converting existing data to `tf` 
+
+**`tidyfun`** includes functions `tfd` and `tfb` for converting matrices, data frames, and some other types to `tf` vectors. It also provides `tf_gather` & `tf_nest` in order to reshape tables with functional data, by going from wide to narrow or from long to short; functions like `as.matrix`, `tf_spread` & `tf_unnest` can reverse these data conversions.
+
+[See here](https://fabian-s.github.io/tidyfun/articles/x02_Conversion.html) details on getting data into (and out of) the `tf` format.
 
 #### `tidyverse` verbs for dealing with functional data inside data frames
 
-All `dplyr` verbs work on `tf`-columns, so you can `filter`, `mutate`, `summarize` etc
-functional data pretty much like conventional data.  
-**`tidyfun`** also provides `tf_gather` & `tf_spread`, `tf_nest` & `tf_unnest`
-in order to reshape tables with functional data, i.e., go from wide to narrow, or from long to short, and *vice versa*
- ([see here](https://fabian-s.github.io/tidyfun/articles/x02_Data_Manipulation.html)).
+All `dplyr` verbs work on `tf`-columns, so you can `filter`, `mutate`, `group_by` & `summarize`, etc, functional data pretty much like conventional "tidy" data. **`tidyfun`** adds several functions that are useful in conjunction with these, like `tf_anywhere` and `tf_smooth`. 
+
+[See here](https://fabian-s.github.io/tidyfun/articles/x03_Data_Wrangling.html) to see how you can wrangle functional data.
 
 #### New `ggplot2` `geoms` and `stats` for functional data
 
@@ -71,8 +117,9 @@ in order to reshape tables with functional data, i.e., go from wide to narrow, o
 - **`gglasagna`** for [lasagna plots](https://asset.jmir.pub/assets/76aeec48564abf0e6f6da8e9cd06346d.png), with an **`order`**-aesthetic to sort the lasagna layers,
 - **`geom_capellini`** for [glyphs](http://ggobi.github.io/ggally/index_files/figure-html/glyphs-basic-usage-1.png) plots (i.e., sparklines),
 
-as well as new methods for `plot`, `lines` and `points` for quick and easy visualizations of functional data 
-([more](https://fabian-s.github.io/tidyfun/reference/index.html#section-visualization-display)).
+as well as new methods for base R graphics functions `plot`, `lines` and `points` for quick and easy visualizations of functional data. 
+
+[See here](https://fabian-s.github.io/tidyfun/reference/index.html#section-visualization-display) for illustrations of visualization approaches.
 
 ----------------------
 
