--- a/vignettes/x04_Visualization.Rmd
+++ b/vignettes/x04_Visualization.Rmd
@@ -15,12 +15,16 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "##",
-  fig.width = 8, fig.height = 5.5)
+  fig.width = 8, 
+  fig.height = 5.5,
+  out.width = "90%"
+)
 
 library(tidyverse)
-library(ggplot2)
 library(viridisLite)
-theme_set(theme_minimal())
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
 options(
   ggplot2.continuous.colour = "viridis",
   ggplot2.continuous.fill = "viridis"
@@ -36,29 +40,22 @@ pal_5 = viridis(7)[-(1:2)]
 set.seed(1221)
 ```
 
-## Plotting **`tidyfun`** data
-
 The **`tidyfun`** package is designed to facilitate **functional data analysis in `R`**, with particular emphasis on compatibility with the `tidyverse`. In this vignette, we illustrate data visualization using **`tidyfun`**.
 
-Other vignettes have examined the **`tfd`** & **`tfb`** data types; how to convert common formats for functional data into these new data types; and data manipulation using `tf` vectors in data frames. We'll use these in the following, and focus more specifically on visualiation
+We'll draw on `tidyfun::chf_df` and `tidyfun::dti_df`, as well as the `fda::CanadianWeather` data. 
 
-
-## Example Data
-
-The data used in this vignette is the `tidyfun::chf_df` dataset. The data contain minute-by-minute observations of log activity counts (stored as a `tfd` vector called `activity`) over seven days for each of 47 subjects with congestive heart failure. In addition to `id` and `activity`, we observe several covariates. 
-
-```{r view_chf}
-data(chf_df)
-
-chf_df
-```
-
-
-## Plotting with `ggplot`
+# Plotting with `ggplot`
 
 `ggplot` is a powerful framework for visualization. In this section, we'll assume some basic familiarity with the package; if you're new to `ggplot`, [this primer](https://rpubs.com/hadley/ggplot-intro) may be helpful.
 
-### `geom_spaghetti` and `geom_meatballs`
+**`tidyfun`** includes **Pasta-themed** `geom`s and plots with for functional data:
+
+- **`geom_spaghetti`** for lines
+- **`geom_meatballs`**  for (lines &) points
+- **`gglasagna`** with **`order`**-arguments to sort the lasagna layers
+- **`geom_capellini`** for little sparklines / glyphs on maps etc.
+
+## `geom_spaghetti` and `geom_meatballs`
 
 One of the most fundamental plots for functional data is the spaghetti plot, which is implemented in `tidyfun` + `ggplot` through `geom_spaghetti`:
 
@@ -78,7 +75,7 @@ chf_df %>%
   geom_meatballs()
 ```
 
-### Using with `ggplot`
+## Using with other `ggplot` features
 
 The new geoms in `tidyfun` "play nicely" with standard `ggplot` aesthetics and options. 
 
@@ -101,7 +98,17 @@ chf_df %>%
   facet_grid(~ day)
 ```
 
-Together with data manipulation tools, this can produce useful exploratory analyses:
+Another example, using the DTI data, is below. 
+
+```{r, dti-fig1}
+dti_df %>% 
+  ggplot() + 
+  geom_spaghetti(aes(y = cca, col = case, alpha = .2 + .4*(case == "control"))) +
+  facet_wrap(~ sex) + 
+  scale_alpha(guide = 'none', range = c(.2, .4))
+```
+
+Together with data manipulation tools, the integration with `ggplot` can produce useful exploratory analyses:
 
 ```{r}
 chf_df %>% 
@@ -115,9 +122,11 @@ chf_df %>%
   facet_grid(~ day)
 ```
 
-### `gglasagna`
+## `gglasagna`
 
-Lasagna plots are "[a saucy alternative to spaghetti plosts](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2937254/)". They are a variant on a heatmaps which show functional observations in rows and use color to illustrate values taken at different arguments. In `tidyfun`, lasagna plots are implemented through `gglasagna`:
+Lasagna plots are "[a saucy alternative to spaghetti plosts](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2937254/)". They are a variant on a heatmaps which show functional observations in rows and use color to illustrate values taken at different arguments. 
+
+In `tidyfun`, lasagna plots are implemented through `gglasagna`. A first example, using the CHF data, is below. 
 
 ```{r}
 chf_df %>% 
@@ -125,49 +134,22 @@ chf_df %>%
   gglasagna(activity)
 ```
 
-
-
-
-
-# New geoms and stats for functional data for customizable `ggplot2` graphics
-
-### visualize with `base` graphics
-
-
-
-
-```{r ex-fig3, eval = FALSE}
-ex = dti_df$cca
-
-plot(ex, type = "spaghetti")
-lines(c(median(ex), mean(ex)), col = c(2, 4))
-
-plot(ex, type = "lasagna", col = viridis(50))
-```
-
-### visualize with `ggplot2`
-
-**Pasta-themed** `geom`s and plots with for functional data:
-
-- **`geom_spaghetti`** for lines
-- **`geom_meatballs`**  for (lines &) points
-- **`gglasagna`** with **`order`**-arguments to sort the lasagna layers
-- **`geom_capellini`** for little sparklines / glyphs on maps etc.
-
-```{r, dti-fig1}
-ggplot(dti_df) + 
-  geom_spaghetti(aes(y = cca, col = case, alpha = .2 + .4*(case == "control"))) +
-  facet_wrap(~ sex) + scale_alpha(guide = 'none', range = c(.2, .4))
-```
+A somewhat more involved example, demonstrating the `order` argument and taking advantage of facetting, is next. 
 
 ```{r, dti-fig2}  
-gglasagna(dti_df, cca, 
-  order = tf_integrate(cca, definite = TRUE), arg = seq(0,1, l = 101)) + 
+dti_df %>% 
+  gglasagna(
+    y = cca, 
+    order = tf_integrate(cca, definite = TRUE), 
+    arg = seq(0,1, l = 101)) + 
   theme(axis.text.y = element_text(size = 6)) + 
-    facet_wrap(~ case, ncol = 2, scales = "free")
+  facet_wrap(~ case, ncol = 2, scales = "free")
 ```
 
-Some data prep for the iconic Canadian Weather data:
+## `geom_capellini`
+
+To illustrate `gemo_capellini`, we'll start with some data prep for the iconic Canadian Weather data:
+
 ```{r}
 canada <- data.frame(
   place = fda::CanadianWeather$place, 
@@ -184,8 +166,8 @@ canada_map <-
   data.frame(maps::map("world", "Canada", plot = FALSE)[c("x", "y")]) 
 ```
 
-Now plot a map of Canada with annual temperature averages in red, 
-precipitation in blue: 
+Now we can plot a map of Canada with annual temperature averages in red, precipitation in blue: 
+
 ```{r}
  ggplot(canada, aes(x = lon, y = lat)) + 
    geom_capellini(aes(tf = precipl10), width = 4, height = 5, colour = "blue", 
@@ -197,8 +179,34 @@ precipitation in blue:
 ```
 
 
+# Plotting with base R
 
+**`tidyfun`** includes several extensions of base R graphics, which operate on `tf` vectors. For example, one can use `plot` to create either spaghetti or lasagna plots, and `lines` to add lines to an existing plot:
 
+```{r}
+cca = dti_df$cca %>% 
+  tfd(arg = seq(0, 1, l = 93), interpolate = TRUE)
 
-## Plotting with base R
+layout(t(1:2))
+
+plot(cca, type = "spaghetti")
+lines(c(median(cca), mean(cca)), col = c(2, 4))
+
+plot(cca, type = "lasagna", col = viridis(50))
+```
+
+The `plot` functions use options and can be edited in ways that are similar to other base graphics. 
+
+```{r, ex-fig2}
+cca_five = cca[1:5]
+
+cca_five %>% 
+  plot(xlim = c(-0.15, 1), col = pal_5, lwd = 2)
+
+text(x = -.1, y = cca_five[,0.07], labels = names(cca_five), col = pal_5, cex = 1.5)
+
+median(cca_five) %>% 
+  lines(col = pal_5[3], lwd = 4)
+```
+
 
