--- a/README.Rmd
+++ b/README.Rmd
@@ -5,9 +5,9 @@ output:
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-# tidyfun <img src="https://github.com/fabian-s/tidyfun/blob/master/README_files/figures/tidyfun_hex.gif?raw=true" align="right" height = "150" />
+# tidyfun <img src="https://github.com/tidyfun/tidyfun/blob/master/README_files/figures/tidyfun_hex.gif?raw=true" align="right" height = "150" />
 
-[![Build Status](https://travis-ci.org/fabian-s/tidyfun.svg?branch=master)](https://travis-ci.org/fabian-s/tidyfun)
+[![Build Status](https://travis-ci.org/tidyfun/tidyfun.svg?branch=master)](https://travis-ci.org/tidyfun/tidyfun)
 
 **`tidyfun`** makes data wrangling and exploratory analysis of functional data easier.
 
@@ -17,19 +17,19 @@ output:
 - arithmetic **operators**, descriptive **statistics** and **graphics** functions for such data
 - `tidyverse`-verbs for handling functional data **inside** data frames.
 
-Look [here](https://fabian-s.github.io/tidyfun/articles/x01_Intro.html) for an introduction with examples.
+Look [here](https://tidyfun.github.io/tidyfun/articles/x01_Intro.html) for an introduction with examples.
 
 ## Installation
 
 ``` r
-devtools::install_github("fabian-s/tidyfun")
+devtools::install_github("tidyfun/tidyfun")
 ```
 
 ## What does it do?
 
 #### New vector-like data types for functional data
 
-**`tidyfun`** provides [new `S3`-classes for functional data](https://fabian-s.github.io/tidyfun/reference/index.html#section-tf-sub-classes-constructors-converters), either as raw data (class `tfd` for *t*idy *f*unctional *d*ata) or in basis representation (class `tfb` for *t*idy *f*unctional *b*asis data). 
+**`tidyfun`** provides [new `S3`-classes for functional data](https://tidyfun.github.io/tidyfun/reference/index.html#section-tf-sub-classes-constructors-converters), either as raw data (class `tfd` for *t*idy *f*unctional *d*ata) or in basis representation (class `tfb` for *t*idy *f*unctional *b*asis data). 
 
 Such `tf`-objects can be subsetted or subassigned, computed on and summarized. 
 
@@ -39,7 +39,7 @@ Almost all
 - math functions like `sum`, `log` or `abs` 
 - and statistics functions like `mean` or `sd`  
 
-are defined for **`tidyfun`**'s data structures ([more](https://fabian-s.github.io/tidyfun/reference/index.html#section-arithmetic-logical-and-summary-functions)).
+are defined for **`tidyfun`**'s data structures ([more](https://tidyfun.github.io/tidyfun/reference/index.html#section-arithmetic-logical-and-summary-functions)).
 
 The `tf` objects are basically glorified lists, so they work well as columns in data frames. That makes it a lot easier to keep your other data and functional measurements together in one object for preprocessing, exploratory analysis and description.
 
@@ -51,7 +51,7 @@ All `dplyr` verbs work on `tf`-columns, so you can `filter`, `mutate`, `summariz
 functional data pretty much like conventional data.  
 **`tidyfun`** also provides `tf_gather` & `tf_spread`, `tf_nest` & `tf_unnest`
 in order to reshape tables with functional data, i.e., go from wide to narrow, or from long to short, and *vice versa*
- ([see here](https://fabian-s.github.io/tidyfun/articles/x02_Data_Manipulation.html)).
+ ([see here](https://tidyfun.github.io/tidyfun/articles/x02_Data_Manipulation.html)).
 
 #### New `ggplot2` `geoms` and `stats` for functional data
 
@@ -63,7 +63,7 @@ in order to reshape tables with functional data, i.e., go from wide to narrow, o
 - **`geom_capellini`** for [glyphs](http://ggobi.github.io/ggally/index_files/figure-html/glyphs-basic-usage-1.png) plots (i.e., sparklines),
 
 as well as new methods for `plot`, `lines` and `points` for quick and easy visualizations of functional data 
-([more](https://fabian-s.github.io/tidyfun/reference/index.html#section-visualization-display)).
+([more](https://tidyfun.github.io/tidyfun/reference/index.html#section-visualization-display)).
 
 ----------------------
 
